updating app title and fixing install button

--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "description": "A conceptual online casino app.",
   "icons": [
     {
-      "src": "https://placehold.co/192x192/4c1d95/ffffff?text=App",
+      "src": "https://placehold.co/192x192/4c1d95/ffffff?text=Casino",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/512x512/4c1d95/ffffff?text=App",
+      "src": "https://placehold.co/512x512/4c1d95/ffffff?text=Casino",
       "sizes": "512x512",
       "type": "image/png"
     }
