--- a/manifest.json
+++ b/manifest.json
@@ -1,19 +1,19 @@
 {
-  "name": "Conceptual Casino",
-  "short_name": "Casino",
-  "start_url": ".",
-  "display": "standalone",
-  "background_color": "#1a1a2e",
-  "theme_color": "#4c1d95",
-  "description": "A conceptual online casino app.",
-  "icons": [
+"name": "Conceptual Casino",
+"short_name": "Casino",
+"start_url": ".",
+"display": "standalone",
+"background_color": "#1a1a2e",
+"theme_color": "#1a1a2e",
+"description": "A conceptual casino web app.",
+"icons": [
     {
-      "src": "https://placehold.co/192x192/4c1d95/ffffff?text=Casino",
+      "src": "https://placehold.co/192x192/1a1a2e/ffffff?text=C",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://placehold.co/512x512/4c1d95/ffffff?text=Casino",
+      "src": "https://placehold.co/512x512/1a1a2e/ffffff?text=C",
       "sizes": "512x512",
       "type": "image/png"
     }
